2013-06-24  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Add "power8"
	entry mapped to PPC_PLATFORM_POWER8.
	* sysdeps/powerpc/dl-procinfo.h (_DL_PLATFORMS_COUNT): Increment for
	POWER8.
	(PPC_PLATFORM_POWER8): Add new platform bit for POWER8 processor.
	(_dl_string_platform): Add case for exporting platform position for
	POWER8.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power8/Implies: Chain
	search path to sysdeps/powerpc/powerpc32/power8 directory.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/power8/Implies: Chain
	search path to sysdeps/powerpc/powerpc64/power8 directory.
	* sysdeps/powerpc/powerpc32/power8/Implies: Chain search path to
	power7 directories.
	* sysdeps/powerpc/powerpc64/power8/Implies: Chain search path to
	power7 directories.

2013-06-24  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* INSTALL: Regenerate.

	* nscd/connections.c (nscd_init): Fix comment.

2013-06-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/libc_fatal.c: Include <string.h>.

	[BZ #15667]
	* soft-fp/op-4.h (__FP_FRAC_ADD_3): Rename variables _c1 and _c2
	to __FP_FRAC_ADD_3_c1 and __FP_FRAC_ADD_3_c2.

2013-06-21  Maciej W. Rozycki  <macro@codesourcery.com>

	* elf/dl-dst.h (DL_DST_REQUIRED): Remove call to
	DL_DST_REQ_STATIC.
	(DL_DST_REQ_STATIC): Remove macro.

2013-06-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #7006]
	* soft-fp/op-common.h (_FP_FROM_INT): Do not call _FP_FRAC_SLL
	with a shift of 0 bits.

2013-06-21  Maciej W. Rozycki  <macro@codesourcery.com>

	* dlfcn/Makefile (tststatic2-ENV): Redefine in terms of
	$(tststatic-ENV).

2013-06-21  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	[BZ #15655]
	* sysdeps/sh/sh4/fpu/fgetexcptflg.c: New file.

2013-06-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* config.h.in (HAVE_CC_INHIBIT_LOOP_TO_LIBCALL): New define.
	* configure.in (libc_cv_cc_loop_to_function): Check if compiler
	accepts -fno-tree-loop-distribute-patterns.